[gd_scene load_steps=3 format=3 uid="uid://djb260s6fyay8"]

[ext_resource type="Script" path="res://graph.gd" id="1_aa82p"]
[ext_resource type="Script" path="res://data_line.gd" id="2_4mk5q"]

[node name="graph" type="Node2D"]
position = Vector2(0, 4)
script = ExtResource("1_aa82p")

[node name="AxisLines" type="Line2D" parent="."]
points = PackedVector2Array(40, 30, 40, 600, 1130, 600)
width = 5.0

[node name="XAxisLable" type="Label" parent="."]
offset_left = 1.0
offset_top = 598.0
offset_right = 333.0
offset_bottom = 621.0
rotation = -1.5708
scale = Vector2(1.70658, 1.70658)
text = "X Axis"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YAxisLable" type="Label" parent="."]
offset_left = 43.0
offset_top = 606.0
offset_right = 679.0
offset_bottom = 629.0
scale = Vector2(1.7, 1.7)
text = "Y Axis"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="."]
offset_left = 73.0
offset_top = -2.0
offset_right = 669.0
offset_bottom = 21.0
scale = Vector2(1.7, 1.7)
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DataLine" type="Line2D" parent="."]
position = Vector2(44, 598)
default_color = Color(0, 0, 1, 1)
script = ExtResource("2_4mk5q")

[connection signal="data_changed" from="." to="DataLine" method="_on_graph_data_changed"]
